frontend/test/should_pass/edge_009.grg
using edge_model_001;
