frontend/test/should_fail/computations_no_assign_func_methodn3.grg
using computations_no_assign_func_methodn3;
